fixed pagination alignment

--- a/client/src/stylesheets/style.scss
+++ b/client/src/stylesheets/style.scss
@@ -128,7 +128,7 @@ body {
 
 .number-center {
   text-align: center;
-  line-height: 2em;
+  line-height: 30px;
 }
 
 .button {
